<resources>
    <string name="app_name">WatchMyWallet</string>
    <string name="app_author">Alena Hramyka</string>
    <string name="preference_file_key">se.mah.aliona.watchmywallet.PREFERENCE_FILE_KEY</string>
    <string name="username">USERNAME</string>
    <string name="usersurname">USERSURNAME</string>

    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_transfers">Transfers</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_settings">Settings</string>

    <!-- Database specific-->
    <string-array name="expenditure_categories">
        <item>Food</item>
        <item>Leisure</item>
        <item>Travels</item>
        <item>Housing</item>
        <item>Other</item>
    </string-array>

    <string-array name="income_categories">
        <item>Salary</item>
        <item>Other</item>
    </string-array>

    <string name="add_transfer_dialog_message">Choose a transfer type to add:</string>
    <string-array name="add_new_transfer">
        <item>Expenditure</item>
        <item>Income</item>
    </string-array>

    <!-- Welcome Fragment -->
    <string name="welcome_message">Welcome to WatchMyWallet, new user! \nPlease enter your name and surname below:</string>
    <string name="input_name">Name</string>
    <string name="input_surame">Surname</string>
    <string name="button_continue">Continue</string>

    <!--Settings Fragment-->
    <string name="settings_message">Having an identity crisis, %1$s %2$s? \nWant to hide your taxes? \nAnother interesting reason? \nChange your name and surname here:</string>
    <string name="settings_input_name">New Name</string>
    <string name="settings_input_surame">New Surname</string>
    <string name="settings_button_done">Go for it!</string>

    <!--Drawer-->
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_closed">Drawer closed</string>

    <!--AddExpenditureFragment-->
    <string name="title_new_exp_fragment">Title:</string>
    <string name="amount_new_exp_fragment">Cost:</string>
    <string name="category_new_exp_fragment">Category:</string>
    <string name="date_new_exp_fragment">Date:</string>
    <string name="button_done_new_exp_fragment">Done!</string>
    <string name="expenditure_barcode_label">Barcode:</string>

    <!--AddIncomeFragment-->
    <string name="title_new_income_fragment">Title:</string>
    <string name="amount_new_income_fragment">Amount:</string>
    <string name="category_new_income_fragment">Category:</string>
    <string name="date_new_income_fragment">Date:</string>
    <string name="button_done_new_income_fragment">Done!</string>

    <!--ExpenditureFragment-->
    <string name="expenditure_checkbox_all_time">All time</string>
    <string name="expenditure_checkbox_all_types">All types</string>
    <string name="expenditure_button_start_date">From date</string>
    <string name="expenditure_button_end_date">End date</string>

    <!--All fragments with lists-->
    <string name="select_time_span_text_view">Select time span:</string>
    <string name="select_category_text_view">Select category:</string>

    <string name="statistics_intro_message">Here is how your economy looks, %1$s. Choose to see for all times or specific dates.</string>
    <string name="statistics_low_balance">Oooops! Looks like you went under budget in this period.</string>
    <string name="statistics_high_balance">Well done! You spent less than you earned in this period.</string>
    <string name="statistics_equal_balance">It\'s hard to believe, but you have spent exactly the same amount of money that you\'ve earned in this period</string>
    <string name="title_activity_scanner">ScannerActivity</string>

    <!--Barcodes-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
</resources>
