<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.SettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="25dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_settings_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="57dp"
            android:text="@string/settings_message"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/et_settings_name"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginTop="59dp"
            android:capitalize="words"
            android:ems="10"
            android:hint="@string/settings_input_name"
            android:inputType="textCapWords"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_message"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <EditText
            android:id="@+id/et_settings_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:capitalize="words"
            android:ems="10"
            android:hint="@string/settings_input_surame"
            android:inputType="textCapWords"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_settings_name"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <layout.util.CustomButton
            android:id="@+id/btn_settings_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_done"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/et_settings_surname"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>