<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.AddIncomeFragment">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">


        <TextView
            android:id="@+id/text_view_title_new_income_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_new_income_fragment"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_title_new_income_fragment"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintLeft_creator="1" />

        <EditText
            android:id="@+id/edit_text_title_new_income_fragment"
            android:layout_width="197dp"
            android:layout_height="40dp"
            android:layout_marginTop="97dp"
            android:ems="10"
            android:hint="Where is the money from?"
            android:inputType="textCapSentences"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintLeft_toRightOf="@+id/text_view_title_new_income_fragment"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_cost_new_income_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_new_income_fragment"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_sum_new_income_fragment"
            app:layout_constraintLeft_toLeftOf="@+id/text_view_title_new_income_fragment" />

        <EditText
            android:id="@+id/edit_text_sum_new_income_fragment"
            android:layout_width="197dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="How much did you get?"
            android:inputType="numberDecimal"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintLeft_toLeftOf="@+id/edit_text_title_new_income_fragment"
            app:layout_constraintRight_toRightOf="@+id/edit_text_title_new_income_fragment"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_title_new_income_fragment" />

        <TextView
            android:id="@+id/text_view_cat_new_income_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_new_income_fragment"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/spinner_cat_new_income_fragment"
            app:layout_constraintLeft_toLeftOf="@+id/text_view_cost_new_income_fragment" />

        <Spinner
            android:id="@+id/spinner_cat_new_income_fragment"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="49dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_text_sum_new_income_fragment"
            app:layout_constraintRight_toRightOf="@+id/edit_text_sum_new_income_fragment"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_sum_new_income_fragment" />

        <TextView
            android:id="@+id/text_view_date_new_income_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_new_income_fragment"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_pick_date_new_income_fragment"
            app:layout_constraintLeft_toLeftOf="@+id/text_view_cat_new_income_fragment" />

        <Button
            android:id="@+id/button_pick_date_new_income_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="SET DATE"
            app:layout_constraintHorizontal_bias="0.614"
            app:layout_constraintLeft_toLeftOf="@+id/spinner_cat_new_income_fragment"
            app:layout_constraintRight_toRightOf="@+id/spinner_cat_new_income_fragment"
            app:layout_constraintTop_toBottomOf="@+id/spinner_cat_new_income_fragment" />

        <layout.util.CustomButton
            android:id="@+id/button_done_new_income_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/button_done_new_income_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_pick_date_new_income_fragment"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>