<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.AddExpenditureFragment">

    <TextView
        android:id="@+id/text_view_title_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/title_new_exp_fragment"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_title_new_exp_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/edit_text_title_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="What did you buy?"
        android:inputType="textCapSentences"
        app:layout_constraintLeft_toRightOf="@+id/text_view_title_new_exp_fragment"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.505" />

    <TextView
        android:id="@+id/text_view_cost_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/amount_new_exp_fragment"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_sum_new_exp_fragment"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_text_sum_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="How much did you pay?"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edit_text_title_new_exp_fragment"
        app:layout_constraintRight_toRightOf="@+id/edit_text_title_new_exp_fragment"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title_new_exp_fragment" />

    <TextView
        android:id="@+id/text_view_cat_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="7dp"
        android:text="@string/category_new_exp_fragment"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinner_cat_new_exp_fragment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinner_cat_new_exp_fragment" />

    <Spinner
        android:id="@+id/spinner_cat_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="@+id/edit_text_sum_new_exp_fragment"
        app:layout_constraintRight_toRightOf="@+id/edit_text_sum_new_exp_fragment"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_sum_new_exp_fragment" />

    <TextView
        android:id="@+id/text_view_date_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_new_exp_fragment"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_pick_date_new_exp_fragment"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_pick_date_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="SET DATE"
        app:layout_constraintRight_toRightOf="@+id/edit_text_sum_new_exp_fragment"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cat_new_exp_fragment"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintLeft_toRightOf="@+id/text_view_date_new_exp_fragment" />

    <Button
        android:id="@+id/button_done_new_exp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_done_new_exp_fragment"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="27dp" />

    <ImageButton
        android:id="@+id/button_scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_title_new_exp_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/scanner_icon" />

</android.support.constraint.ConstraintLayout>
