<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transfer_detail_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_gravity="right"
    tools:context="layout.TransferDetailFragment">

    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:columnCount="2"
        app:rowCount="4">

        <TextView
            android:id="@+id/trans_detail_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:text="@string/title_new_income_fragment"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_gravity="right" />

        <TextView
            android:id="@+id/trans_detail_value_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            app:layout_gravity="start"
            tools:text="**********" />

        <TextView
            android:id="@+id/trans_detail_label_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:text="@string/amount_new_income_fragment"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_gravity="right" />

        <TextView
            android:id="@+id/trans_detail_value_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text=""
            android:textSize="18sp"
            app:layout_gravity="start" />

        <TextView
            android:id="@+id/trans_detail_label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:text="@string/date_new_income_fragment"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_gravity="right" />

        <TextView
            android:id="@+id/trans_detail_value_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text=""
            android:textSize="18sp"
            app:layout_gravity="start" />

        <TextView
            android:id="@+id/trans_detail_label_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:text="@string/category_new_income_fragment"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_gravity="right" />

        <TextView
            android:id="@+id/trans_detail_value_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text=""
            android:textSize="18sp"
            app:layout_gravity="start" />
    </android.support.v7.widget.GridLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/transfer_detail_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

</android.support.design.widget.CoordinatorLayout>
