<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/transfers_cat_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:foregroundGravity="center"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/transfers_title_list_view_item"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/transfers_title_list_view_item"
            app:layout_constraintVertical_bias="0.538"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/transfers_title_list_view_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center|start"
            android:padding="10dp"
            android:text="@string/title_new_income_fragment"
            android:textAlignment="textStart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/transfers_cat_image"
            app:layout_constraintRight_toLeftOf="@+id/transfers_sum_list_view_item"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/transfers_sum_list_view_item"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:text="@string/amount_new_income_fragment"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/transfers_title_list_view_item"
            app:layout_constraintRight_toLeftOf="@+id/transfers_date_list_view_item"
            app:layout_constraintTop_toTopOf="@+id/transfers_title_list_view_item" />

        <TextView
            android:id="@+id/transfers_date_list_view_item"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="10dp"
            android:text="@string/date_new_income_fragment"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/transfers_sum_list_view_item"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>